welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:7: error: not found: value abB3040
	return (apA3040 && abB3040) || (apA4050 && apB4050)
                           ^